2013-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.2

	* vignettes/*: Moved files from inst/doc/

	* ChangeLog/*: Moved from inst/

	* .travis.yml: Added for Github / Travis support
	* .gitignore: Added for git support

2009-08-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.1

	* R/random.R: Added missing 'cols' default argument to randomSequence,
	  with thanks to Lynn Amon for spotting this.
	* man/random.Rd: Documentation updated accordingly

2009-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.0

	* R/random.R: Changed code for new API provided by Mads at random.org
	* man/random.Rd: Documentation updated accordingly

	* NAMESPACE: Added namespace support to package

2007-04-26  Dirk Eddelbuettel  <edd@debian.org>

	* 0.1.2 release

	* inst/doc/random-intro.Rnw: Fix two small snafus to enable proper
	processing of the vignette; thanks to Kurt Hornik for the heads-up

2007-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* 0.1.1 release

	* R/random.R: Use '%' in gsub(), not '\%'

2006-08-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/random-essay.Rnw: first full draft

2006-08-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/random.R: some more polishing

2006-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/random-essay.Rnw: more spit and polish for vignette
	based on the essay.html document by Mads Haahr (from 1999)

2006-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION, man/*, R/*, inst/*: turned into a proper R package

2006-05-20  Dirk Eddelbuettel  <edd@debian.org>

	* randomOrg.R: wrote a few simple function to access
	http://random.org via R's read.file URL access

