@@ -14,7 +14,7 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 #install:
-#  - ./travis-tool.sh r_install rbenchmark microbenchmark
+#  - ./travis-tool.sh install_r rbenchmark microbenchmark
 
 script: ./travis-tool.sh run_tests
 
