@@ -1,18 +1,18 @@
 Package: random
-Version: 0.2.2
-Date: 2013-12-10
+Version: 0.2.2.1
+Date: 2015-01-06
 Author: Dirk Eddelbuettel <edd@debian.org>
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
-Title: True random numbers using random.org
-Description: This package provides an interface to the true random number
-	service provided by the random.org website created by Mads Haahr. 
-	The random.org web service samples atmospheric noise via radio 
-	tuned to an unused broadcasting frequency together with a skew
-	correction algorithm due to John von Neumann.  More background is
-	available in the included vignette based on an essay by Mads Haahr. 
-	In its current form, the package offers functions to retrieve 
-        random integers, randomized sequences and random strings. 
+Title: True Random Numbers using random.org
+Description: The true random number service provided by the random.org 
+ website created by Mads Haahr samples atmospheric noise via radio 
+ tuned to an unused broadcasting frequency together with a skew
+ correction algorithm due to John von Neumann.  More background is available
+ in the included vignette based on an essay by Mads Haahr.  In its current
+ form, the package offers functions to retrieve  random integers, randomized
+ sequences and random strings.  
 Depends: R (>= 2.8.0)
+Imports: curl
 License: GPL (>= 2)
-URL: http://www.random.org
+URL: https://www.random.org
 
