@@ -1,15 +1,14 @@
 
-# $Id$
-
 randomQuota <- function() {
-    urltxt <- "http://random.org/quota/?format=plain"
-    ##quota <- read.table(file=urltxt, as.is=TRUE, header=FALSE, nrows=1)
-    quota <- scan(file=urltxt, nlines=1, quiet=TRUE)
+    urltxt <- "https://random.org/quota/?format=plain"
+    con <- curl(urltxt)
+    quota <- as.integer(readLines(con))
+    close(con)
     return(quota)
 }
 
 quotaCheck <- function() {
-    return(randomQuota() > 0)     	# ok as long as it is positive
+    return(randomQuota() >= 0)     	# ok as long as it is positive or zero, bad of negative
 }
 
 randomNumbers <- function(n=100, min=1, max=100, col=5, base=10, check=TRUE) {
@@ -21,9 +20,9 @@ randomNumbers <- function(n=100, min=1, max=100, col=5, base=10, check=TRUE) {
         stop("Request size 'n' not cleanly divisible by column size 'col'")
     if (!base %in% c(2,8,10,16))
         stop("Base has to be one of 2, 8, 10 or 16")
-    if (check & FALSE==quotaCheck())
+    if (check && !quotaCheck())
         stop("random.org suggests to wait until tomorrow")
-    urlbase <- "http://random.org/integers/"
+    urlbase <- "https://random.org/integers/"
     urltxt <- paste(urlbase,
                     "?num=", format(n, scientific=FALSE),
                     "&min=", format(min, scientific=FALSE),
@@ -33,7 +32,9 @@ randomNumbers <- function(n=100, min=1, max=100, col=5, base=10, check=TRUE) {
                     "&format=plain",
                     "&rnd=new",
                     sep="")
-    randNum <- as.matrix(read.table(file=urltxt, as.is=TRUE))
+    con <- curl(urltxt)
+    randNum <- as.matrix(read.table(con, as.is=TRUE))
+    #close(con)
     return(randNum)
 }
 
@@ -41,9 +42,9 @@ randomSequence <- function(min=1, max=20, col=1, check=TRUE) {
     if (min < -1e9 | max > 1e9 | min > max)
         stop(paste("Random sequence range must be between -1000,000,000",
                    "and 1000,000,000"))
-    if (check & FALSE==quotaCheck())
+    if (check && !quotaCheck())
         message("random.org suggests to wait with larger requests")
-    urlbase <- "http://random.org/sequences/"
+    urlbase <- "https://random.org/sequences/"
     urltxt <- paste(urlbase,
                     "?min=", min,
                     "&max=", max,
@@ -51,7 +52,9 @@ randomSequence <- function(min=1, max=20, col=1, check=TRUE) {
                     "&format=plain",
                     "&rnd=new",
                     sep="")
-    randSeq <- as.matrix(read.table(file=urltxt, as.is=TRUE))
+    con <- curl(urltxt)
+    randSeq <- as.matrix(read.table(con, as.is=TRUE))
+    #close(con)
     return(randSeq)
 }
 
@@ -60,13 +63,14 @@ randomStrings <- function(n=10, len=5, digits=TRUE, upperalpha=TRUE, loweralpha=
         stop("Random string requests must be between 1 and 10,000 numbers")
     if (len < 1 || len > 20)
         stop("Random string length must be between 1 and 20")
-    if (class(digits)!="logical" || class(upperalpha)!="logical" || class(loweralpha)!="logical" || class(unique)!="logical")
+    if (class(digits)!="logical" || class(upperalpha)!="logical" ||
+        class(loweralpha)!="logical" || class(unique)!="logical") 
         stop("The 'digits', '(lower|upper)alpha' and 'unique' arguments has to be logical")
     if ( !digits && !upperalpha && !loweralpha)
         stop("The 'digits', 'loweralpha' and 'loweralpha' cannot all be false at the same time")
-    if (check & FALSE==quotaCheck())
+    if (check && !quotaCheck())
         stop("random.org suggests to wait until tomorrow")
-    urlbase <- "http://random.org/strings/"
+    urlbase <- "https://random.org/strings/"
     urltxt <- paste(urlbase,
                     "?num=", n,
                     "&len=", len,
@@ -77,7 +81,9 @@ randomStrings <- function(n=10, len=5, digits=TRUE, upperalpha=TRUE, loweralpha=
                     "&format=plain",
                     "&rnd=new",
                     sep="")
-    randStrings <- as.matrix(read.table(file=urltxt))
+    con <- curl(urltxt)
+    randStrings <- as.matrix(read.table(con))
+    #close(con)
     return(randStrings)
 }
 
